Fixed alignment to center

--- a/style.css
+++ b/style.css
@@ -51,20 +51,58 @@ body {
   color: #113448;
 }
 
+.div-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.div-input {
+  height: 250px;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.div-input-text {
+  height: 220px;
+  width: 470px;
+  padding-left: 25px;
+}
+
 input[type=text] {
   background-color: #71c2af;
   color: #113448;
-  padding: 12px 20px;
-  margin: 8px 85px;
-  width: 500px;
-  height: 250px;
   border-color: #113448;
   box-sizing: border-box;
   font-size: 16px;
 }
 
+.div-output {
+  height: 250px;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.div-output-text {
+  height: 220px;
+  width: 470px;
+  padding-left: 25px;
+}
+
 ::placeholder {
   color: #113448;
+}
+
+.button-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button {
@@ -76,20 +114,12 @@ input[type=text] {
   text-align: center;
   border: 1px solid black;
   font-size: 20px;
-  margin-top: 14px;
-  margin-bottom: 18px;
-}
-
-.button-position1 {
-  margin-left: 515px;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .button-position2 {
-  margin-left: 30px;
-}
-
-.button-position3 {
-  margin-left: 550px;
+  margin-left: 40px;
 }
 
 .footer {
